--- a/css.css
+++ b/css.css
@@ -1,89 +1,97 @@
 input[type="number"]{
+    width: 10%;
+    background-color: rgba(163, 150, 150, 0.3);
+    border-color: black;
+    }
+   #label1{
+    font-size: 20px;
+    font-style: bold !important;
+   }
+    body{
+        min-height: 100vh;
+        background-image: url("back7.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-family: 'Quicksand', sans-serif;
+    }
+  
+    #titre {
+        color: black;
+        font-size: 30px;
+        text-align: center;
+        margin-top: 15px;
+        font-weight:bolder ;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    #myButton{
+        font-family: Arial, Helvetica, sans-serif;
         width: 10%;
-        background-color: rgba(163, 150, 150, 0.3);
+        border-color: black; 
+        height: 10%; 
+        font-size: 20px;
+        
+      border-radius: 3px;
+      box-shadow: 6px 6px 20px 4px rgba(0, 0, 0, 0.3);
+    }
+    #myButton:hover{
+      transform: scale(1.01);
+      box-shadow: 6px 6px 25px 4px rgba(0, 0, 0, 0.18);
+  }
+    #m{
+        column-count: 2;
+    }
+    #m1 {
+        font-size: 20px;
+        text-align: center;
+    }
+    #m2{
+        font-size: 20px;
+       text-align: center;
+
+    }
+    #mat1 {
+        font-size: 20px;
+        text-align: center;
+        margin-left: auto;
+    }
+
+    #mat2{
+        font-size: 20px;
+       text-align: center;
+       margin-right: auto;
+    }
+    button#botona{
+        font-family: Arial, Helvetica, sans-serif;
+        width: 10%;
+        border-color: black; 
+        height: 15%; 
+        border-radius: 3px;
+        box-shadow: 6px 6px 20px 4px rgba(0, 0, 0, 0.3);
+    }
+    #resultat{
         border-color: black;
-        }
-       
+        border-style: solid;
+    }
+    #botona{
+        margin-left: 10px;
+    }
+    
+    
+    #env{
         
-        body{
-            background: url(back5.jpg) ;
-        }
-        #titre {
-            color: black;
-            font-size: 30px;
-            text-align: center;
-            margin-top: 15px;
-            font-weight:bolder ;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        #myButton{
-            font-family: Arial, Helvetica, sans-serif;
-            width: 10%;
-            border-color: black; 
-            height: 10%; 
-            font-size: 20px;
-            
-          border-radius: 3px;
-          box-shadow: 6px 6px 20px 4px rgba(0, 0, 0, 0.3);
-        }
-        #myButton:hover{
-          transform: scale(1.01);
-          box-shadow: 6px 6px 25px 4px rgba(0, 0, 0, 0.18);
-      }
-        #m{
-            column-count: 2;
-        }
-        #m1 {
-            font-size: 20px;
-            text-align: center;
-        }
-        #m2{
-            font-size: 20px;
-           text-align: center;
-
-        }
-        #mat{
-            column-count: 3;
-        }
-        #mat1 {
-            font-size: 20px;
-            margin-left: auto;
-
-        }
-
-        #mat2{
-            font-size: 20px;
-           margin-right: auto;
-
-        }
-        button#botona1{
-            font-family: Arial, Helvetica, sans-serif;
-            width: 10%;
-            border-color: black; 
-            height: 15%; 
-            border-radius: 3px;
-            box-shadow: 6px 6px 20px 4px rgba(0, 0, 0, 0.3);
-        }
-        
-        
-        
-        #env{
-            
-            text-align: center;
-        }
-        
-        #lali{
-            column-count: 2;
-        }
-        #lwl{
-            text-align: left;
-        }
-        #tani{
-            text-align:right;
-        }
-        .creatmat{
-            text-align: center;
-        }
-        #botona111{
-            column-count: 2;
-        }
+        text-align: center;
+    }
+    
+    #lali{
+        column-count: 2;
+    }
+    #lwl{
+        text-align: left;
+    }
+    #tani{
+        text-align:right;
+    }
+    .creatmat{
+        text-align: center;
+    }
+   
