--- a/CSS/H.css
+++ b/CSS/H.css
@@ -76,7 +76,7 @@
   }
   img{
     vertical-align: middle;
-    margin-top:2% ;
+    margin-top:7% ;
   }
   body{
       text-align: center;  
@@ -85,3 +85,73 @@
     width: 50% !important;
     min-height: 40%!important;
   }
+  
+  .footer {
+    bottom: 1.5%;
+     width:100%;
+     position: absolute;
+     display: flex;
+     font-size: initial;
+     justify-content: center !important;
+     padding: 0.5%;
+     
+     text-align: center; 
+     color:  rgb(238,226,220);
+     z-index: 2;
+ }
+
+body {
+    text-align: center;
+    background-image: url("../background/WEB2.png");
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    position: relative;
+    overflow: hidden;
+    min-height: 100vh;
+
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  text-align: center; 
+          display: block;
+}
+.c{
+  background: rgb(172, 59, 97);
+color: rgb(238,226,220);
+font-size: medium;
+    color: rgb(238, 226, 220);
+    padding-left: 2%;
+    padding-right: 2%;
+    letter-spacing: 0.5px;
+    border: 0px !important;
+    cursor: pointer;
+    border-radius: 100px;
+    height: 33px;
+}
+@media screen and (max-width:600px){
+
+  body {
+    text-align: center;
+    background-image: url("../background/MOBILE2.png");
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    position: relative;
+    overflow: hidden;
+    min-height: 100vh;
+
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  text-align: center; 
+          display: block;
+}
+img{
+  width: 40%;
+  height: 40%;
+  margin-top: 28%;
+}
+.c{
+    margin-top: 17%;
+    height: 6%;
+}
+}
